chore(backend): consistency-review fixes + invitation error taxonomy + DTO naming
Backend consistency pass against the documented standards, together with the
DTO-naming standardization already in progress in the working tree. Full test
suite green.

Consistency-review fixes (this pass):
- Invitations: split InvitationInvalidException into typed exceptions —
  revoked / already-used -> 410 Gone, email-mismatch -> 400. Accept now returns
  201 when a membership is created and 200 on idempotent re-accept.
- Type domain invariants (category / item-category type mismatch, items-total,
  participant-shares) as FinancialTransactionExceptions instead of raw
  IllegalArgumentException; all mapped to 400.
- Plan-scope lookups via derived findByIdAndPlan queries (transaction,
  category, invitation) instead of load-then-check-in-memory.
- Rename nested request parts ItemInputDto/ParticipantInputDto ->
  ItemDto/ParticipantDto (bare Dto suffix, matching response parts).
- readOnly transactions on read-only service methods; @NotNull startDate and
  @Email on invitation email.
- Remove dead UserRepository constructor params and the @RequestBody leak in
  AuthenticationService; response DTOs use .toList() not Collectors.toList().

Also included (pre-existing WIP in the tree): response/request DTO naming
standardization (DashboardSummaryDto -> DashboardSummaryResponseDto,
InvitationPreviewDto -> InvitationPreviewResponseDto) and related
endpoint/service adjustments.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_015LXjcC2U4qpCQxDpafwvGX